--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "vite": "5.2.11"
   },
   "dependencies": {
-    "@excaliburjs/testing": "^0.25.0"
+    "@excaliburjs/testing": "^0.25.0",
+    "bump-ts": "^0.6.2",
+    "collision-typescript": "^1.0.5"
   }
 }
